# CPCFO

./: README.md  app.py  docker-compose.yml  pyproject.toml
.docker/nginx/: nginx.conf
ml/: constants.py  pipeline.py  processing.py  utils.py
ml/models/: model
ml/notebooks/: boost.ipynb  inference.ipynb
routing/v1/: main.py
schemas/: geojson.py
services/: ml.py
